--- a/index.html
+++ b/index.html
@@ -16,25 +16,26 @@
     <canvas id="hyperspace-canvas"></canvas>
 
     <div class="relative flex flex-col items-center" id="main-card-group">
-        <div class="cv-card text-center z-10 w-auto px-12">
-            <h1 class="text-4xl font-black text-white">Weverson Zanelatto</h1>
-            <p class="text-xl text-blue-300 mt-2">Desenvolvedor Python Júnior | Back-End & Análise de Dados</p>
+        <div class="cv-card text-center z-10 w-auto px-6 md:px-12">
+            <h1 class="text-3xl md:text-4xl font-black text-white">Weverson Zanelatto</h1>
+            <p class="text-lg md:text-xl text-blue-300 mt-2">Desenvolvedor Python Júnior | Back-End & Análise de Dados</p>
         </div>
         <div id="organogram-lower" class="relative mt-8 flex flex-col items-center">
             <div class="line line-v" style="width: 2px; height: 32px; top: -32px; left: 50%;"></div>
             <div class="line line-h" style="width: 704px; height: 2px; top: 0; left: 50%; transform: translateX(-50%);"></div>
-            <div class="flex justify-center gap-8 w-full mt-8">
-                <div class="relative flex flex-col items-center gap-8">
+            <!-- MUDANÇA AQUI: Classes de layout removidas -->
+            <div id="organogram-columns" class="flex justify-center gap-8 w-full mt-8">
+                <div class="organogram-col relative flex flex-col items-center gap-8">
                     <div class="line line-v" style="width: 2px; height: 100%; top: -32px; left: 50%; --delay: 0.5s;"></div>
                     <div class="cv-card w-80 clickable" data-modal-id="resumo"><h2 class="text-2xl font-bold">Resumo</h2></div>
                     <div class="cv-card w-80 clickable" data-modal-id="educacao"><h2 class="text-2xl font-bold">Formação</h2></div>
                 </div>
-                <div class="relative flex flex-col items-center gap-8">
+                <div class="organogram-col relative flex flex-col items-center gap-8">
                     <div class="line line-v" style="width: 2px; height: 100%; top: -32px; left: 50%; --delay: 1s;"></div>
                     <div class="cv-card w-80 clickable" data-modal-id="experiencia"><h2 class="text-2xl font-bold">Experiência</h2></div>
                     <div class="cv-card w-80 clickable" data-modal-id="habilidades"><h2 class="text-2xl font-bold">Habilidades</h2></div>
                 </div>
-                <div class="relative flex flex-col items-center gap-8">
+                <div class="organogram-col relative flex flex-col items-center gap-8">
                     <div class="line line-v" style="width: 2px; height: 100%; top: -32px; left: 50%; --delay: 1.5s;"></div>
                     <div class="cv-card w-80 clickable" data-modal-id="projetos"><h2 class="text-2xl font-bold">Projetos</h2></div>
                     <div class="cv-card w-80 clickable" data-modal-id="contato"><h2 class="text-2xl font-bold">Contato</h2></div>
@@ -43,7 +44,7 @@
         </div>
     </div>
 
-    <div id="modal-overlay" class="fixed inset-0 flex items-center justify-center z-50">
+    <div id="modal-overlay" class="fixed inset-0 flex items-center justify-center z-50 p-4">
         <div id="modal-content" class="w-full max-w-3xl relative p-6 rounded-lg">
             <button id="modal-close" class="absolute top-4 right-5 text-white text-3xl font-bold">&times;</button>
             <h2 id="modal-title" class="text-3xl font-bold mb-4 border-b-2 border-blue-400 pb-2 text-white"></h2>
@@ -81,7 +82,6 @@
         </div>
     </div>
 
-    <!-- Link para o seu arquivo JavaScript -->
     <script src="js/main.js"></script>
 </body>
 </html>
